[tool.poetry]
name = "experiment_develop"
version = "0.3.0"
description = "All for me"
authors = ["Ochi Yuma <ochiyuma.ochi@gmail.com>"]
repository = "https://github.com/Chizuchizu/experiment_develop"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
